--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-libcdescent
+cdescent
 ============
 
 A pure C implementation of a library to obtain lasso, elastic net L1 regularized linear regression and variable selection estimator based on coordinate descent algorithm.
