--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,5 @@
-               Compiling and Installing cdescent library
+@c -*- coding: utf-8 -*-
+                      Compiling and Installing cdescent library
 
 Note: The cdescent library is a work in progress and frequently updated.
 Check out the latest information on the site:
