--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-11-08 Mitsuru Utsugi <utsugi@mountain.ocn.ne.jp>
+ * release 0.4.2
+ * add pathwiseopt object for pathwise CCD optimization
+ * modify interface of linregmodel_new routine
+ * add mm_real_xj_ssq routine
+
 2014-10-31 Mitsuru Utsugi <utsugi@mountain.ocn.ne.jp>
  * release 0.4.1
  * add pathwise CCD routine
