--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2015-01-16 Mitsuru Utsugi <utsugi@mountain.ocn.ne.jp>
+ * release 0.4.4
+ * optimize mm_real routines
+ * remove example program 'l1reg_example'
+ * add example program for elastic net regression 'elasticnet'
+ * add example program for adaptive elastic net regression 'adaelasticnet'
+
 2014-11-30 Mitsuru Utsugi <utsugi@mountain.ocn.ne.jp>
  * release 0.4.3
  * add error handling routine for mm_real object
